Fixed error contrast on button

--- a/style.css
+++ b/style.css
@@ -779,9 +779,14 @@ h4 {
     color: #F3976C!important;
 }
 
+.black
+{
+    color: #303030;
+}
+
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #303030!important;
 }
 
 .btn-atomic-tangerine:hover {
